<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create_new_account_">Create New Account</string>
    <string name="add_image">Add image</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="online">Online</string>
</resources>