<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="24dp"
    tools:context=".activities.SignUp_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account_"
            android:textColor="@color/primary_text"
            android:textSize="30sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="13sp" />

        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/sign_up"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            app:cornerRadius="8dp"/>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleSmallInverse"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <TextView
            android:id="@+id/textSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:text="@string/sign_in"
            android:textStyle="bold"/>
    </LinearLayout>

</ScrollView>