<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:padding="24dp"
    tools:context=".activities.SignIn_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:layout_marginTop="60dp"
            android:textColor="@color/primary_text"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_continue"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:textColor="@color/secondary_text"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"/>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:layout_marginTop="20dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                app:cornerRadius="8dp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleSmallInverse"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:layout_width="25dp"
                android:layout_height="25dp" />
        </FrameLayout>



        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:textColor="@color/primary"
            android:text="@string/create_new_account"
            android:textStyle="bold"/>



    </LinearLayout>

</ScrollView>